# SNEWS_Publishing_Tools

./: .dockerignore  .gitignore  .readthedocs.yaml  .readthedocs.yml  AUTHORS  CHANGES.md  ChangeLog  Dockerfile  Dockerfile.coincidence_system  Dockerfile.snews_db_pipeline  LICENSE  README.md  _config.yml  docker-compose.yml  examples.ipynb  firedrill.ipynb  generate_firedrill_creds.sh  hop_creds.csv  hop_mgs_schema.py  hop_pub.py  index.md  message_schema.py  pyproject.toml  requirements.txt  run_firedrill.sh  setup.cfg  setup.py  snews_pt_utils.py  snews_utils.py  start_containers.sh
.github/workflows/: firedrill.yml  mac-testing.yml  mac10-py37.yml  mac10-py38.yml  mac10-pytest.yml  mac11-py310.yml  mac11-py37.yml  mac11-py38.yml  mac11-py39.yml  mac11-pytest.yml  mac12-py311-312.yml  mac13-py311-312.yml  mac14-py311-312.yml  python-app.yml  shell-test.yml  tests.yml  ubuntu-py39.yml  ubuntu-pytest.yml  ubuntu-testing.yml  ubuntu18-pytest.yml  ubuntu20-py310.yml  ubuntu20-py37-310.yml  ubuntu20-py37.yml  ubuntu20-py38.yml  ubuntu20-py39.yml  ubuntu20-pytest.yml  ubuntu22-py311-312.yml  unit-tests.yml  windows-testing.yml
SNEWS_PT/: __init__.py  __main__.py  example_detector_log.json  hop_pub.py  message_schema.py  snews_pt_utils.py  snews_pub.py  snews_sub.py
SNEWS_PT/auxiliary/: custom_script.py  make_scenarios.py  scenarios.json  test-config.env  test_scenarios.py  try_scenarios.py
SNEWS_PT/test/: __init__.py  example_timing_tier_message.json  make_scenarios.py  random_plugin.py  scenarios.json  snews_pt_test_suite.py  test_coincidence_tier.py  (+16 more)
doc/: README.md  cli_docs.md  cli_help.txt  conf.py  index.rst  requirements.txt
docs/: Makefile  README.md  cli_docs.md  cli_help.txt  conf.py  index.rst  requirements.txt  subscribed_messages.json
snews_pt/: __init__.py  __main__.py  message_schema.py  messages.py  remote_commands.py  snews_format_checker.py  snews_pt_utils.py  snews_pub.py  snews_sub.py  tier_decider.py
(+180 files in other folders)
